JWT Refresh token & Azure Active Directory both are done